# chaotic-animations

./: .gitignore  Cargo.toml  README.md
src/: main.rs  math.rs  render.rs
